Changelog - Landscape mode supported on Safari - Issues on Chrome related to Chrome's lack of support
To Fix
- TestCard border temporarily removed for Chrome support

--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,7 @@ body {
   background-position: center;
   
   
-  color: white;
+  
 }
 
 .flex{
